--- a/Boodschappen/index.html
+++ b/Boodschappen/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Boodschappenbudgetter</title>
+  <meta name="robots" content="noindex, nofollow">
   <style>
     :root{
       --bg: #0b0c10;
